fix primary title overflow

--- a/client/src/css/ourCompaniesSection/ourCompanies.module.css
+++ b/client/src/css/ourCompaniesSection/ourCompanies.module.css
@@ -57,3 +57,15 @@
   margin: 0% 0px 0% 0px;
   box-sizing: border-box;
 }
+
+
+.primaryTitleText {
+  font-family: "Montserrat", sans-serif;
+  align-self: center;
+  font-size: 0.8rem;
+  font-weight: 700;
+  letter-spacing: 3px;
+  margin: 0px 0px 0px 10px;
+  letter-spacing: 0.8em;
+  color: #ffffff;
+}
